Updated general colors to match USAS style guide and for additional contrast

--- a/src/_scss/abstract/variables/colors.scss
+++ b/src/_scss/abstract/variables/colors.scss
@@ -1,7 +1,7 @@
 // Color
-$color-primary:              #0071bc;
-$color-primary-darker:       #205493;
-$color-primary-darkest:      #112e51;
+$color-primary:              #07648d;
+$color-primary-darker:       #074b69;
+$color-primary-darkest:      #002d3f;
 
 $color-gray-dark:            #323a45;
 $color-gray:                 #5b616b; // lighten($color-gray-dark, 20%)
@@ -41,7 +41,7 @@ $color-green-light:          #4aa564; // lighten($color-green, 20%)
 $color-green-lighter:        #94bfa2; // lighten($color-green, 60%)
 $color-green-lightest:       #e7f4e4; // lighten($color-green, 60%)
 
-$color-cool-blue:            #205493;
+$color-cool-blue:            #07648d;
 $color-cool-blue-light:      #4773aa; // lighten($color-cool-blue, 20%)
 $color-cool-blue-lighter:    #8ba6ca; // lighten($color-cool-blue, 60%)
 $color-cool-blue-lightest:   #dce4ef; // lighten($color-cool-blue, 90%)
