--- a/src/_scss/layouts/validation/progress/_done.scss
+++ b/src/_scss/layouts/validation/progress/_done.scss
@@ -1,11 +1,11 @@
 @mixin validationProgressDoneStep {
 	.step {
-		border: 1px solid $color-focus;
-		background-color: $color-focus;
+		border: 1px solid $color-primary-alt-darkest;
+		background-color: $color-primary-alt-darkest;
 		color: $color-white;
 
 		&:before, &:after {
-			background-color: $color-focus;
+			background-color: $color-primary-alt-darkest;
 			z-index: -1;
 			bottom: 0.9em;
 		}
