Making all the table headers a shade darker for contrast

--- a/src/_scss/components/tables/_genericBody.scss
+++ b/src/_scss/components/tables/_genericBody.scss
@@ -5,7 +5,7 @@
             td {
                 padding: 15px;
                 font-size: 1.4rem;
-                color: $color-gray;
+                color: $color-gray-dark;
                 word-wrap: break-word;
                 @media(max-width:$medium-screen) {
                 	padding: 10px;
