--- a/src/_scss/pages/submissionsTable/_filters.scss
+++ b/src/_scss/pages/submissionsTable/_filters.scss
@@ -1,5 +1,5 @@
 .dashboard-filters {
-    background-color: $color-gray;
+    background-color: $color-gray-dark;
     padding: rem(7.5);
     border: solid rem(1) $color-white;
     border-bottom: 0;
