--- a/src/_scss/components/tables/_tableHeaders.scss
+++ b/src/_scss/components/tables/_tableHeaders.scss
@@ -5,7 +5,7 @@
         font-size: 1.4rem;
         font-weight: $font-bold;
         color: $color-white;
-        background: $color-gray;
+        background: $color-gray-dark;
 
         & tr {
             & th {
