--- a/src/_scss/pages/crossFile/errorBox/_tabs.scss
+++ b/src/_scss/pages/crossFile/errorBox/_tabs.scss
@@ -1,7 +1,7 @@
 .error-tabs {
 	margin-top: 40px;
 	width: 100%;
-	background-color: $color-gray;
+	background-color: $color-gray-dark;
 
 	.tab-item {
 		margin-top: 20px;
@@ -9,7 +9,7 @@
 		display: inline-block;
 		padding: 0px 30px 0px 15px;
 
-		background-color: $color-gray-light;
+		background-color: $color-gray-dark;
 
 		line-height: 5rem;
 		font-size: 1.6rem;
