Only underlining links surrounded by text

--- a/src/_scss/layouts/default/header/_menuBar.scss
+++ b/src/_scss/layouts/default/header/_menuBar.scss
@@ -52,6 +52,7 @@
         border: none;
         background-color: $color-gray-dark;
         color: $color-white;
+        text-decoration: none;
         height: ($header-height - $top-header-height);
         display: table-cell;
         vertical-align: middle;
