--- a/src/_scss/pages/reviewData/_content.scss
+++ b/src/_scss/pages/reviewData/_content.scss
@@ -36,6 +36,10 @@
         b {
             font-weight: $font-semibold;
         }
+        
+        a {
+            text-decoration: underline;
+        }
     }
 
     .comments-header {
