--- a/src/_scss/components/typography/_global.scss
+++ b/src/_scss/components/typography/_global.scss
@@ -103,3 +103,18 @@ p + h2, p + h3, p + h4, p + h5, p + h6 {
    margin-top: $base-line-height * 3;
 }
 
+
+
+// links (underline if surrounded by other text)
+ul,
+ol,
+p {
+    a {
+        color: $color-primary;
+        text-decoration: underline;
+    }
+}
+
+a {
+    color: $color-primary;
+}
