--- a/src/_scss/pages/addData/uploadPage/_uploadDropzone.scss
+++ b/src/_scss/pages/addData/uploadPage/_uploadDropzone.scss
@@ -3,7 +3,7 @@
     padding: 1rem 2rem 2rem;
     cursor: pointer;
     background-color: #f5f5f5;
-    color: #808080;
+    color: $color-gray;
     font-size: 1.4rem;
     position: relative;
 
