--- a/src/_scss/pages/dashboard/filters/_dashboardAgencyFilter.scss
+++ b/src/_scss/pages/dashboard/filters/_dashboardAgencyFilter.scss
@@ -6,7 +6,7 @@
         position: relative;
 
         input {
-            color: #adadad;
+            color: $color-gray;
         }
 
         .awesomplete ul {
