--- a/src/_scss/pages/modals/settings/_sidebar.scss
+++ b/src/_scss/pages/modals/settings/_sidebar.scss
@@ -35,7 +35,7 @@
             position: relative;
 
             input {
-                color: #adadad;
+                color: $color-gray;
             }
 
             .awesomplete ul {
