--- a/src/_scss/pages/rawFiles/rawFiles.scss
+++ b/src/_scss/pages/rawFiles/rawFiles.scss
@@ -3,7 +3,7 @@
 
     button {
         @include button-unstyled;
-        color: $color-primary-alt-dark;
+        color: $color-primary;
 
         &:hover {
             text-decoration: underline;
