Making the primary blues to be more vivid and less teal

--- a/src/_scss/abstract/variables/colors.scss
+++ b/src/_scss/abstract/variables/colors.scss
@@ -1,6 +1,6 @@
 // Color
-$color-primary:              #07648d;
-$color-primary-darker:       #074b69;
+$color-primary:              #005EA2;
+$color-primary-darker:       #0b4778;
 $color-primary-darkest:      #002d3f;
 
 $color-gray-dark:            #323a45;
