Updating the current step to also be consistent with the other steps

--- a/src/_scss/layouts/validation/progress/_current.scss
+++ b/src/_scss/layouts/validation/progress/_current.scss
@@ -4,8 +4,8 @@
 	}
 
 	.step {
-		border: 1px solid $color-primary-alt-dark;
-		background-color: $color-primary-alt-dark;
+		border: 1px solid $color-primary-alt-darkest;
+		background-color: $color-primary-alt-darkest;
 		color: $color-white;
 
 		&:before {
