--- a/src/_scss/abstract/variables/colors.scss
+++ b/src/_scss/abstract/variables/colors.scss
@@ -1,7 +1,7 @@
 // Color
 $color-primary:              #005EA2;
 $color-primary-darker:       #0b4778;
-$color-primary-darkest:      #002d3f;
+$color-primary-darkest:      #112f4e;
 
 $color-gray-dark:            #323a45;
 $color-gray:                 #5b616b; // lighten($color-gray-dark, 20%)
