Lowercase hex colors

--- a/src/_scss/abstract/variables/colors.scss
+++ b/src/_scss/abstract/variables/colors.scss
@@ -1,5 +1,5 @@
 // Color
-$color-primary:              #005EA2;
+$color-primary:              #005ea2;
 $color-primary-darker:       #0b4778;
 $color-primary-darkest:      #112f4e;
 
