Updating the single day picker
+ Also fixing a little CSS for the month on the ranged day picker

--- a/src/_scss/components/datepicker/_calendar-range-datepicker.scss
+++ b/src/_scss/components/datepicker/_calendar-range-datepicker.scss
@@ -25,6 +25,8 @@
                 .rdp-month {
                     .rdp-month_caption {
                         justify-content: space-around;
+                        font-family: $font-sans;
+                        font-size: rem(12);
                     }
 
                     table {
