Fixing default month
+ Apparently subtracting 1 from the month doesn't subtract 1 month, using moment instead
+ Fixing a visual issue in Chrome

--- a/src/_scss/components/datepicker/_calendar-range-datepicker.scss
+++ b/src/_scss/components/datepicker/_calendar-range-datepicker.scss
@@ -15,6 +15,7 @@
             .rdp-months {
                 justify-content: space-between;
                 max-width: 100%;
+                gap: 0;
 
                 .rdp-nav {
                     width: 100%;
