--- a/src/_scss/components/typeahead/_typeahead.scss
+++ b/src/_scss/components/typeahead/_typeahead.scss
@@ -15,6 +15,10 @@
             position: absolute;
             clip: rect(0, 0, 0, 0);
         }
+
+        [hidden] {
+            display: none;
+        }
     }
     .alert {
         div {
