Removing dimensions and fixing lint
+ react-dimensions is now so outdated it doesn't work with React 19, recreating the functionality manually

--- a/src/_scss/pages/validateData/fileItem/bottomSide/bottomSide.scss
+++ b/src/_scss/pages/validateData/fileItem/bottomSide/bottomSide.scss
@@ -19,6 +19,13 @@
 	    h3 {
 	        margin: 0;
 	    }
+
+		.treemap-wrapper {
+			width: 100%;
+			height: 100%;
+			padding: 0px;
+			border: 0px;
+		}
 	}
 
 	// implement the treemap
