Update redux and start fixing FA issues
+ Found a few FA issues, fixed the glaring ones first

--- a/src/_scss/components/tables/_submissionTableLink.scss
+++ b/src/_scss/components/tables/_submissionTableLink.scss
@@ -9,7 +9,7 @@
         position: relative;
         color: $color-gray;
 
-        &.fa-calendar-alt {
+        &.fa-calendar-days {
             font-size: rem(27);
         }
     }
