--- a/src/_scss/pages/addData/_content.scss
+++ b/src/_scss/pages/addData/_content.scss
@@ -68,7 +68,7 @@
                     font-size: rem(14);
                     line-height: rem(18);
                 }
-                .fa-exclamation-triangle {
+                .fa-triangle-exclamation {
                     font-size: rem(18);
                     color: $color-gold-dark;
                     float: right;
