--- a/src/_scss/pages/reviewData/_content.scss
+++ b/src/_scss/pages/reviewData/_content.scss
@@ -57,7 +57,7 @@
                 margin-top: rem(2);
                 color: $color-gold-light;
 
-                &.fa-exclamation-circle {
+                &.fa-circle-exclamation {
                     color: $color-secondary;
                     font-size: rem(16);
                 }
