--- a/src/_scss/sharedComponents/_paginator.scss
+++ b/src/_scss/sharedComponents/_paginator.scss
@@ -34,7 +34,7 @@
         }
 
         svg {
-            &.fa-ellipsis-h {
+            &.fa-ellipsis {
                 font-size: rem(10);
 
                 &.ellipsis-pre {
