--- a/src/_scss/site/_globalFooter.scss
+++ b/src/_scss/site/_globalFooter.scss
@@ -40,7 +40,7 @@
         font-size: $h2-font-size;
         font-weight: bold;
 
-        .fa-exclamation-triangle {
+        .fa-triangle-exclamation {
             color: $color-gold-light;
             margin-right: rem(10);
         }
