--- a/src/_scss/components/replacementCorner/_replacementCorner.scss
+++ b/src/_scss/components/replacementCorner/_replacementCorner.scss
@@ -19,7 +19,7 @@
             top: rem(9);
             color: $color-gray;
             &:hover {
-                color: $gray-dark;
+                color: $color-gray-dark;
             }
         }
 
