--- a/src/_scss/layouts/login/_topBanner.scss
+++ b/src/_scss/layouts/login/_topBanner.scss
@@ -55,7 +55,7 @@
         padding: 0;
         
         svg {
-            color: $gray-dark
+            color: $color-gray-dark
         } 
     }
 
