--- a/src/_scss/layouts/modal/_modalClose.scss
+++ b/src/_scss/layouts/modal/_modalClose.scss
@@ -12,7 +12,7 @@
         }
         &:hover {
             & svg {
-                color: $gray-dark;
+                color: $color-gray-dark;
             }
         }
     }
