--- a/src/_scss/pages/addData/uploadPage/_uploadDropzone.scss
+++ b/src/_scss/pages/addData/uploadPage/_uploadDropzone.scss
@@ -56,7 +56,7 @@
         color: $color-secondary;
     }
     .usa-da-dropzone-success {
-        color: $brand-success;
+        color: $color-green-light;
     }
     .progress {
         margin-top: 10px;
