--- a/src/_scss/abstract/variables/responsive.scss
+++ b/src/_scss/abstract/variables/responsive.scss
@@ -2,3 +2,90 @@
 $small-screen:      768px;
 $medium-screen:     992px;
 $large-screen:      1200px;
+
+.container {
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+    &:before {
+        content: " ";
+        display: table;
+    }
+    @media(min-width: $small-screen) {
+        width: 750px;
+    }
+    @media(min-width: $medium-screen) {
+        width: 970px;
+    }
+    @media(min-width: $large-screen) {
+        width: 1170px;
+    }
+    .row {
+        margin-left: -15px;
+        margin-right: -15px;
+        &:before {
+            content: " ";
+            display: table;
+        }
+        .col-xs-12 {
+            width: 100%;
+            float: left;
+            min-height: 1px;
+            padding-left: 15px;
+            padding-right: 15px;
+            position: relative;
+        }
+        .col-md-12 {
+            min-height: 1px;
+            padding-left: 15px;
+            padding-right: 15px;
+            position: relative;
+            @media(min-width: $medium-screen) {
+                width: 100%;
+                float: left;
+            }
+        }
+    }
+    .navbar-header {
+        margin-left: 15px;
+        margin-right: 15px;
+
+        @media(min-width: $small-screen) {
+            margin-left: 0px;
+            margin-right: 0px;
+            float: left;
+        }
+    }
+}
+
+.pull-right {
+    float: right !important;
+}
+
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    border: 0;
+}
+
+.container-fluid {
+    margin-left: auto;
+    margin-right: auto;
+
+    &:before {
+        content: " ";
+        display: table;
+    }
+}
+
+*, :after, :before {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
