Starting to clean up individual pages
+ Also reorganizing some general CSS

--- a/src/_scss/abstract/mixins/typography.scss
+++ b/src/_scss/abstract/mixins/typography.scss
@@ -4,5 +4,6 @@
     line-height: 2.4rem;
     color: #525252;
     max-width: 70rem;
+    margin: 0 0 rem(10);
     margin-bottom: $base-line-height;
 }
