--- a/src/_scss/components/typography/_global.scss
+++ b/src/_scss/components/typography/_global.scss
@@ -22,6 +22,7 @@ h1, h2, h3, h4, h5, h6, .display-1, .display-2 {
 h1 {
     font-weight: $font-light;
     font-size: 5.9rem;
+    margin-top: rem(20);
     margin-bottom: $base-line-height * 1.625;
     line-height: 1.1;
 }
@@ -38,6 +39,7 @@ h3 {
     font-weight: $font-light;
     font-size: 3.8rem;
     line-height: 1.36;
+    margin-top: rem(20);
 }
 
 h4 {
