--- a/src/_scss/layouts/login/login.scss
+++ b/src/_scss/layouts/login/login.scss
@@ -3,7 +3,7 @@
 @import "./_topBanner";
 @import "./_centerBanner";
 @import "./_warningFooter";
-@import "./loginForm/loginForm";
+@import "./_loginForm";
 @import "./_loadingAnimation";
 @import "../default/header/_warningBanner";
 
