--- a/src/_scss/pages/dashboard/graph/_categoryButtons.scss
+++ b/src/_scss/pages/dashboard/graph/_categoryButtons.scss
@@ -14,7 +14,7 @@
         border: solid 1px $color-gray-light;
         border-radius: 3px;
         width: rem(138);
-        .fa-circle {
+        .circle-icon {
             margin-right: rem(5);
         }
         &.category-button_filtered, &:disabled {
