--- a/src/_scss/pages/generateEF/generateItem/_file.scss
+++ b/src/_scss/pages/generateEF/generateItem/_file.scss
@@ -26,10 +26,10 @@
     position: absolute;
     top: rem(10);
     left: rem(4.5);
-    & .fa-circle-exclamation {
+    & .exclamation-circle-icon {
         color: $color-secondary;
     }
-    & .fa-circle-check {
+    & .check-circle-icon {
         color: $color-green-light;
     }
 }
