--- a/src/_scss/pages/modals/settings/_settingsModal.scss
+++ b/src/_scss/pages/modals/settings/_settingsModal.scss
@@ -74,7 +74,7 @@
                 .settings-table__rule {
                     padding-left: rem(10);
                 }
-                .fa-bars {
+                .horizontal-bars-icon {
                     margin-right: rem(10);
                 }
                 @import './impactDropdown';
