--- a/src/_scss/pages/reviewData/submissionButtons.scss
+++ b/src/_scss/pages/reviewData/submissionButtons.scss
@@ -100,7 +100,7 @@
             font-size: rem(20);
             margin-right: rem(10);
 
-            &.fa-spinner {
+            &.spinner-icon {
                 margin-right: 0;
                 margin-left: rem(10);
             }
