--- a/src/_scss/components/tables/_submissionTableLink.scss
+++ b/src/_scss/components/tables/_submissionTableLink.scss
@@ -9,7 +9,7 @@
         position: relative;
         color: $color-gray;
 
-        &.fa-calendar-days {
+        &.calendar-icon {
             font-size: rem(27);
         }
     }
