--- a/src/_scss/pages/help/_topButton.scss
+++ b/src/_scss/pages/help/_topButton.scss
@@ -12,7 +12,7 @@
         display: block;
         background-color: $color-gray-light;
         text-align: center;
-        svg.fa-angle-up {
+        svg.angle-up-icon {
             color: $color-white;
             position: relative;
             top: 10px;
