--- a/src/_scss/pages/modals/reviewData/_certifyModal.scss
+++ b/src/_scss/pages/modals/reviewData/_certifyModal.scss
@@ -67,7 +67,7 @@
 		h3 {
 			font-size: rem(18);
 		}
-		.fa-triangle-exclamation {
+		.exclamation-triangle-icon {
 			color: $color-gold-dark;
 			margin-right: rem(5);
 		}
