--- a/src/_scss/pages/modals/sharedModal.scss
+++ b/src/_scss/pages/modals/sharedModal.scss
@@ -52,7 +52,7 @@
                 margin-left: rem(58);
                 font-size: rem(18);
             }
-            .fa-triangle-exclamation {
+            .exclamation-triangle-icon {
                 font-size: rem(25);
                 color: $color-gold-dark;
                 float: left;
