--- a/src/_scss/pages/reviewData/narrative/narrative.scss
+++ b/src/_scss/pages/reviewData/narrative/narrative.scss
@@ -54,7 +54,7 @@
             font-size: rem(18);
             margin-bottom: rem(-2);
 
-            &.fa-chevron-down {
+            &.chevron-down-icon {
                 margin-left: rem(10);
             }
         }
@@ -125,15 +125,15 @@
                 left: rem(-5);
                 top: rem(4);
 
-                &.fa-circle-check {
+                &.check-circle-icon {
                     color: $color-green-light;
                 }
 
-                &.fa-circle-exclamation {
+                &.exclamation-circle-icon {
                     color: $color-secondary;
                 }
 
-                &.fa-triangle-exclamation {
+                &.exclamation-triangle-icon {
                     color: $color-gold-dark;
                 }
             }
