Replacing a lot of the new px numbers with rem

--- a/src/_scss/layouts/login/_loginForm.scss
+++ b/src/_scss/layouts/login/_loginForm.scss
@@ -58,8 +58,8 @@
             font-family: $font-sans;
             font-size: 1.6rem;
 
-            padding-left: 55px;
-            height: 44px;
+            padding-left: rem(55);
+            height: rem(44);
             margin-top: 0;
             margin-bottom: 0;
             max-width: none;
