Fixing FABS page

--- a/src/_scss/pages/uploadFabsFile/uploadFabsFile.scss
+++ b/src/_scss/pages/uploadFabsFile/uploadFabsFile.scss
@@ -28,6 +28,13 @@
 		}
 	}
 
+	.alert-info {
+		@import "../../components/alerts/_alerts";
+		@include infoAlert;
+
+		margin: 0;
+	}
+
 	.validation-holder {
 		.alert-error {
 			@import "../../components/alerts/_alerts";
