--- a/src/_scss/sharedComponents/_base.scss
+++ b/src/_scss/sharedComponents/_base.scss
@@ -114,6 +114,11 @@ img {
     float: left;
 }
 
+.col-xs-3 {
+    width: 25%;
+    float: left;
+}
+
 .col-xs-4 {
     width: 33.33%;
     float: left;
@@ -236,9 +241,9 @@ img {
     }
 }
 
-.col-xs-1, .col-xs-4, .col-xs-6, .col-xs-8, .col-xs-11, .col-xs-12, .col-sm-12, .col-md-1, .col-md-2, .col-md-3,
-.col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12, .col-lg-8,
-.col-lg-12 {
+.col-xs-1, .col-xs-3, .col-xs-4, .col-xs-6, .col-xs-8, .col-xs-11, .col-xs-12, .col-sm-12, .col-md-1, .col-md-2,
+.col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12,
+.col-lg-8, .col-lg-12 {
     min-height: rem(1);
     padding-left: rem(15);
     padding-right: rem(15);
