--- a/src/_scss/abstract/mixins/background.scss
+++ b/src/_scss/abstract/mixins/background.scss
@@ -1,3 +1,5 @@
+@use "sass:color";
+
 @mixin contentBlockWrapper() {
     background-color: $color-white;
     box-shadow: 0 1px 2px rgba(43,59,93,.29);
@@ -8,8 +10,8 @@
 }
 
 @function as-alpha($hex-color, $alpha) {
-	$-local-red: red(rgba($hex-color, 1));
-	$-local-green: green(rgba($hex-color, 1));
-	$-local-blue: blue(rgba($hex-color, 1));
-	@return rgba($-local-red, $-local-green, $-local-blue,$alpha);
+	$-local-red: color.channel($hex-color, "red", $space: rgb);
+	$-local-green: color.channel($hex-color, "green", $space: rgb);
+	$-local-blue: color.channel($hex-color, "blue", $space: rgb);
+	@return rgba($-local-red, $-local-green, $-local-blue, $alpha);
 }
