--- a/src/_scss/pages/modals/generateFile/generateFile.scss
+++ b/src/_scss/pages/modals/generateFile/generateFile.scss
@@ -2,7 +2,9 @@
 	@import "../../../layouts/modal/modal";
     @include modalLayout;
 
-    padding-top: rem(40);
+    & {
+        padding-top: rem(40);
+    }
     
     .usa-da-landing-modal-close {
         @include modalClose;
